WIP new analysis function.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181003 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181003 Burst analysis.ipynb
@@ -52,7 +52,9 @@
     "import skimage.morphology\n",
     "import scipy\n",
     "from glob import glob\n",
+    "import os\n",
     "import asyncio\n",
+    "from deepmerge import merge_or_raise\n",
     "from IPython.display import Video\n",
     "\n",
     "IDX = pd.IndexSlice"
@@ -101,7 +103,10 @@
     "asyncio.get_event_loop().set_debug(True)\n",
     "import logging\n",
     "\n",
-    "logging.basicConfig(level=logging.DEBUG)"
+    "logging.basicConfig(level=logging.DEBUG)\n",
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter(\"ignore\")"
    ]
   },
   {
@@ -228,7 +233,7 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"09:00:00\",\n",
+    "    walltime=\"01:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
@@ -847,15 +852,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deepmerge import merge_or_raise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for t in tnrange(33):\n",
     "    frames_to_analyze2 = frames_to_analyze.loc[\n",
     "        IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos, :, t], :\n",
@@ -904,15 +900,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "util.map_dict_levels(lambda k: (k[1], k[0], *k[2:]), dict(a=dict(b=dict(z=9), c=2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pixelwise_funcs = {\n",
     "    \"mean\": np.mean,\n",
     "    \"min\": np.min,\n",
@@ -921,23 +908,45 @@
     "        np.percentile, q=(30, 50, 70, 90, 95)\n",
     "    ),\n",
     "}\n",
+    "trenchwise_funcs = {\"sharpness\": image.sharpness, **pixelwise_funcs}\n",
+    "mask_labelwise_funcs = {\"size\": np.sum}\n",
+    "\n",
+    "# TODO: we binary dilate mask for every channel\n",
     "\n",
     "\n",
     "def measurement_func(label_image, intensity_image):\n",
+    "    eroded_label_image = (\n",
+    "        util.repeat_apply(skimage.morphology.binary_erosion, 2)(label_image != 0)\n",
+    "        * label_image\n",
+    "    )\n",
+    "    #     plt.figure(figsize=(10,10))\n",
+    "    #     plt.imshow(label_image)\n",
+    "    #     plt.show()\n",
+    "    #     plt.figure(figsize=(10,10))\n",
+    "    #     plt.imshow(eroded_label_image);0/0\n",
+    "    if intensity_image is None:\n",
+    "        minlength = label_image.max() + 1\n",
+    "        labelwise_df = pd.DataFrame(\n",
+    "            {\n",
+    "                (\"noerode\", \"size\"): np.bincount(label_image.flat, minlength=minlength),\n",
+    "                (\"erode3\", \"size\"): np.bincount(\n",
+    "                    eroded_label_image.flat, minlength=minlength\n",
+    "                ),\n",
+    "            }\n",
+    "        )\n",
+    "        labelwise_df.index.name = \"label\"\n",
+    "        return dict(labelwise=labelwise_df)\n",
     "    labelwise = {\n",
     "        \"noerode\": workflow.map_frame_over_labels(\n",
     "            pixelwise_funcs, label_image, intensity_image\n",
     "        ),\n",
     "        \"erode3\": workflow.map_frame_over_labels(\n",
-    "            pixelwise_funcs,\n",
-    "            util.repeat_apply(skimage.morphology.binary_dilation, 3)(label_image),\n",
-    "            intensity_image,\n",
+    "            pixelwise_funcs, eroded_label_image, intensity_image\n",
     "        ),\n",
     "    }\n",
-    "    trenchwise = {\"sharpness\": image.sharpness, **pixelwise_funcs}\n",
-    "    return dict(\n",
-    "        trenchwise=pd.concat(trenchwise, axis=0), labelwise=pd.concat(labelwise, axis=0)\n",
-    "    )\n",
+    "    trenchwise_df = workflow.map_frame(trenchwise_funcs, intensity_image)\n",
+    "    labelwise_df = pd.concat(labelwise, axis=1)\n",
+    "    return dict(trenchwise=trenchwise_df, labelwise=labelwise_df)\n",
     "\n",
     "\n",
     "def _measure(\n",
@@ -946,7 +955,7 @@
     "    measurement_func,\n",
     "    segmentation_channel=\"MCHERRY\",\n",
     "    measure_channels=None,\n",
-    "    segment_func=trench_segmentation.watershed.segment_trench,\n",
+    "    segmentation_func=trench_segmentation.watershed.segment_trench,\n",
     "    include_frame=True,\n",
     "    frame_bits=8,\n",
     "    frame_downsample=4,\n",
@@ -958,20 +967,24 @@
     "        partial(image.quantize, bits=frame_bits),\n",
     "        partial(image.downsample, factor=frame_downsample),\n",
     "    )\n",
-    "    trench_crops = processing.get_trench_crops(\n",
+    "    trench_crops = processing._get_trench_crops(\n",
     "        trenches,\n",
     "        frames,\n",
     "        include_frame=include_frame,\n",
     "        frame_transformation=frame_transformation,\n",
+    "        filename=filename,\n",
+    "        position=position,\n",
     "    )\n",
     "    flattened_crops = {\n",
-    "        k: v for k, v in util.flatten_dict(trench_crops).items() if k[0] != \"_frame\"\n",
+    "        (*k[0], *k[1:]): v\n",
+    "        for k, v in util.flatten_dict(trench_crops).items()\n",
+    "        if k[0] != \"_frame\"\n",
     "    }\n",
     "    segmentation_masks = {}\n",
     "    measurements = {}\n",
     "    # segment\n",
     "    for (trench_set, trench_idx, channel, t), crop in flattened_crops.items():\n",
-    "        if measure_channels is None or channel not in measure_channels:\n",
+    "        if measure_channels is not None and channel not in measure_channels:\n",
     "            continue\n",
     "        segmentation_key = (trench_set, trench_idx, segmentation_channel, t)\n",
     "        segmentation_mask = segmentation_masks.get(segmentation_key, None)\n",
@@ -979,14 +992,34 @@
     "            segmentation_masks[segmentation_key] = segmentation_func(\n",
     "                flattened_crops[segmentation_key]\n",
     "            )\n",
+    "            # measure mask\n",
+    "            measurements[(\"mask\", (trench_set, trench_idx, t))] = measurement_func(\n",
+    "                segmentation_masks[segmentation_key], None\n",
+    "            )\n",
     "        # measure\n",
-    "        measurements[(trench_set, trench_idx, channel, t)] = measurement_func(\n",
+    "        measurements[(channel, (trench_set, trench_idx, t))] = measurement_func(\n",
     "            segmentation_masks[segmentation_key], crop\n",
     "        )\n",
     "    measurement_dfs = util.map_dict_levels(lambda k: (k[1], k[0], *k[2:]), measurements)\n",
     "    for name, dfs in measurement_dfs.items():\n",
-    "        df = pd.concat(dfs, axis=1)\n",
-    "        df.index.names = [\"trench_set\", \"trench\", \"channel\", \"t\"]\n",
+    "        dfs = util.unflatten_dict(dfs)\n",
+    "        if isinstance(util.get_one(dfs, level=2), pd.Series):\n",
+    "            df = pd.concat(\n",
+    "                {\n",
+    "                    channel: pd.concat(channel_dfs, axis=1).T\n",
+    "                    for channel, channel_dfs in dfs.items()\n",
+    "                },\n",
+    "                axis=1,\n",
+    "            )\n",
+    "        else:\n",
+    "            df = pd.concat(\n",
+    "                {\n",
+    "                    channel: pd.concat(channel_dfs, axis=0)\n",
+    "                    for channel, channel_dfs in dfs.items()\n",
+    "                },\n",
+    "                axis=1,\n",
+    "            )\n",
+    "        df.index.names = [\"trench_set\", \"trench\", \"t\", *df.index.names[3:]]\n",
     "        measurement_dfs[name] = df\n",
     "    images = dict(\n",
     "        raw=trench_crops, segmentation=util.unflatten_dict(segmentation_masks)\n",
@@ -1003,7 +1036,274 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos = slice(280, 282)\n",
+    "%%time\n",
+    "pos = 280  # slice(280, 282)\n",
+    "selected_trenches_segmentation2 = selected_trenches_segmentation.loc[\n",
+    "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos, :, :, :], :\n",
+    "]\n",
+    "frames_to_analyze2 = frames_to_analyze.loc[\n",
+    "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos], :\n",
+    "]\n",
+    "pos = 301  # slice(280, 282)\n",
+    "selected_trenches_segmentation3 = selected_trenches_segmentation.loc[\n",
+    "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos, :, :, :], :\n",
+    "]\n",
+    "frames_to_analyze3 = frames_to_analyze.loc[\n",
+    "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos], :\n",
+    "]\n",
+    "a = measure(selected_trenches_segmentation2, frames_to_analyze2, measurement_func)\n",
+    "b = measure(selected_trenches_segmentation3, frames_to_analyze3, measurement_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "pos = slice(0, 2)\n",
+    "selected_trenches_segmentation2 = selected_trenches_segmentation.loc[\n",
+    "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos, :, :, :10], :\n",
+    "]\n",
+    "frames_to_analyze2 = frames_to_analyze.loc[\n",
+    "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos], :\n",
+    "]\n",
+    "measure_and_write = processing.iterate_over_groupby([\"filename\", \"position\"])(\n",
+    "    compose(\n",
+    "        partial(processing.write_images_and_measurements, filename_func=filename_func),\n",
+    "        measure,\n",
+    "    )\n",
+    ")\n",
+    "a = measure_and_write(\n",
+    "    selected_trenches_segmentation2, frames_to_analyze2, measurement_func\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filename_func(extension=None, kind=None, name=None, filename=None, position=None):\n",
+    "    components = [s for s in (\"\", name, extension) if s is not None]\n",
+    "    return os.path.join(\n",
+    "        f\"{filename}.{kind}\", \"pos{:d}\".format(position) + \".\".join(components)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Client(n_workers=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "pos = slice(0, 2)\n",
+    "selected_trenches_segmentation2 = selected_trenches_segmentation.loc[\n",
+    "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos, :, :, :10], :\n",
+    "]\n",
+    "frames_to_analyze2 = frames_to_analyze.loc[\n",
+    "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos], :\n",
+    "]\n",
+    "_measure_and_write = compose(\n",
+    "    partial(processing.write_images_and_measurements, filename_func=filename_func),\n",
+    "    _measure,\n",
+    ")\n",
+    "measure_and_write = processing.iterate_over_groupby([\"filename\", \"position\"])(\n",
+    "    _measure_and_write\n",
+    ")\n",
+    "# measure_and_write = processing.iterate_over_groupby(['filename', 'position'])(partial(_measure_and_write, segmentation_channel='MCHERRY'))\n",
+    "measure_and_write = processing.iterate_over_groupby([\"filename\", \"position\"])(\n",
+    "    partial(client.submit, measure_and_write)\n",
+    ")\n",
+    "# a = measure_and_write(selected_trenches_segmentation2, frames_to_analyze2, measurement_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cloudpickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = cloudpickle.dumps(measure_and_write)\n",
+    "cloudpickle.loads(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cloudpickle.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "d = pa.open_file(\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2.measurements/pos4.labelwise.arrow\"\n",
+    ").read_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = merge_or_raise.merge(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "\n",
+    "def filename_func(extension=None, kind=None, name=None, filename=None, position=None):\n",
+    "    components = [s for s in (\"\", name, extension) if s is not None]\n",
+    "    return os.path.join(\n",
+    "        f\"{filename}.{kind}\", \"pos{:d}\".format(position) + \".\".join(components)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "processing.write_images_and_measurements(c, filename_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.get_one(a, level=2)[\"trenchwise\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.get_one(a, level=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos = 280  # slice(280, 282)\n",
     "selected_trenches_segmentation2 = selected_trenches_segmentation.loc[\n",
     "    IDX[[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\"], pos, :, :, :], :\n",
     "]\n",
@@ -1018,8 +1318,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "a = measure(selected_trenches_segmentation2, frames_to_analyze2, measurement_func)"
+    "a.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_in(\n",
+    "    (\n",
+    "        (\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\", 280),\n",
+    "        \"images\",\n",
+    "        \"raw\",\n",
+    "        1,\n",
+    "        0,\n",
+    "    ),\n",
+    "    a,\n",
+    ").keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
    ]
   },
   {
