Refactored trench_detection, split up into a bunch of small files.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181007 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181007 Burst analysis.ipynb
@@ -690,6 +690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%output size=200\n",
     "ui.image_viewer(frame_stream)"
    ]
   },
@@ -699,7 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_frame_info(trench_diag, frame_stream)"
+    "# ui.show_frame_info(trench_diag, frame_stream)"
    ]
   },
   {
@@ -708,8 +709,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = ui.show_grid(selected, stream=frame_stream)\n",
-    "g"
+    "# g = ui.show_grid(selected, stream=frame_stream)\n",
+    "# g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(trench_detection.core)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(trench_detection)"
    ]
   },
   {
@@ -727,18 +746,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(8, 8))\n",
-    "plt.imshow(frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%%time\n",
     "tp, diag, _ = diagnostics.wrap_diagnostics(\n",
-    "    trench_detection.hough.find_trenches, ignore_exceptions=False\n",
+    "    trench_detection.find_trenches, ignore_exceptions=False\n",
     ")(frame)"
    ]
   },
