--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -10,28 +10,26 @@ TODO: way to export holoviews plot image (matplotlib) to numpy array (cf. render
 TODO: trench_img invert_yaxis issue with holoviews master
 
 ### PATH TO SHIPPING
-pluggable clustering/reorg trench finding
-    labeling
-    hough
-    end finding
-clustering to allow for better ()
+(2h) find_trenches with hough for all trenches at once/hough per trench set (with one overall)
+    split find_trench_ends into cross-section finding and endpoint determination
+    use cross-section finding part to split up trench sets
+    
+(1d) trench finding for big snakes
+
+(1d) label_viewer
+
+(2hr) async as_finished/clean up
+(1d) trench detection+save to parquet+quality filtering
 
 (1d) benchmark with script that only reads in all frames
     also look at memory usage
     find which striping is best
     copy big snakes data into that striping (shell alias to do this)
 
-(1d) trench finding for big snakes
-
-(1d) label_viewer
-
 (2hr) parquet/arrow loading func
     should we put index columns in dfs???
         think about dictionary harmonization
         discoverability: how do we specify filenames/where to find what filename/position?
-
-(2hr) async as_finished/clean up
-(1d) trench detection+save to parquet+quality filtering
 
 ### NEXT GOAL
 DISABLE SPILL-TO-DISK
