WIP trench set finding for arbitrary number of trench sets.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181008 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181008 Burst analysis.ipynb
@@ -758,7 +758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag)"
+    "ui.show_plot_browser(diag, \"labeling.set_finding.stacked_profile\")"
    ]
   },
   {
