First cut of trench set detection that automatically detects number of trench sets.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181008 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181008 Burst analysis.ipynb
@@ -746,10 +746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "tp, diag, _ = diagnostics.wrap_diagnostics(\n",
-    "    trench_detection.find_trenches, ignore_exceptions=False\n",
-    ")(frame)"
+    "frame_rot = skimage.transform.rotate(frame, 30)"
    ]
   },
   {
@@ -758,7 +755,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag, \"labeling.set_finding.stacked_profile\")"
+    "from matplotlib.path import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "tp, diag, _ = diagnostics.wrap_diagnostics(\n",
+    "    trench_detection.find_trenches, ignore_exceptions=False\n",
+    ")(frame_rot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag, \"labeling.set_finding\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag)"
    ]
   },
   {
