WIP debugging pipeline.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181018 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181018 Burst analysis.ipynb
@@ -199,6 +199,7 @@
     "    # interface='ib0',\n",
     "    memory=\"6GB\",  # TODO!!!\n",
     "    local_directory=\"/tmp\",\n",
+    "    log_directory=\"/home/jqs1/projects/matriarch/log\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
@@ -570,15 +571,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.restart()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "all_trenches_futures = {}\n",
     "all_trench_errs = {}\n",
     "all_analysis_futures = {}\n",
@@ -617,7 +609,7 @@
     "        kind=\"trenches\", extension=\"parquet\", filename=filename\n",
     "    )\n",
     "    save_trenches_futures[filename] = client.submit(\n",
-    "        save_trenches, list(trenches_futures.values()), trenches_filename\n",
+    "        save_trenches, list(trenches_futures.values()), trenches_filename, priority=10\n",
     "    )\n",
     "# OPTIONALLY: stream analysis to master"
    ]
